<resources>
    <string name="app_name">Expensify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item1">Item!</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="transactions_on_this_date">Transactions On This Date</string>
    <string name="_2020">2023</string>
    <string name="newslist">newslist</string>
    <string name="author">Author</string>
    <string name="desc">Desc</string>
    <string name="source">Source</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="_01_january_2021">01 January 2021</string>
    <string name="food">Food</string>
    <string name="_100">100</string>
    <string name="_27_july_2020">27 July, 2020</string>
    <string name="cash">Cash</string>
    <string name="_200">200</string>
    <string name="plusSign">+</string>
    <string name="dot">.</string>
    <string name="net_balance">Net Balance</string>
    <string name="_00">00</string>
    <string name="cashTransaction">Cash</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="_00_0">00.0</string>
    <string name="_00_0_">00.0</string>
    <string name="_00_0_1">00.0</string>
    <string name="upcomming_transactions">Upcoming Transactions</string>
    <string name="hi">Hi,</string>
    <string name="nameR">Roshan</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="you_can_edit_transaction">You can edit transaction</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="edit_transaction1">Edit Transaction</string>
    <string name="you_can_edit_transaction1">You can edit transaction</string>
    <string name="you_can_edit_transaction2">You can edit transaction</string>
    <string name="edit_transaction2">Edit Transaction</string>
    <string name="you_can_edit_transaction3">You can edit transaction</string>
    <string name="edit_transaction3">Edit Transaction</string>
    <string name="you_can_view_calender">You can view calender</string>
    <string name="calender_transaction">calender Transaction</string>
    <string name="you_can_view_calender1">You can view calender</string>
    <string name="paymenttype">Payment Types</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="expense">Expense</string>
    <string name="incomeBtn">income</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="recurring_transaction">Recurring Transaction</string>
    <string name="commentTextB">Comment</string>
    <string name="transaction_date">Transaction Date*</string>
    <string name="amountText">Amount*</string>
    <string name="transaction_name">Transaction Name*</string>
    <string name="user_name">User Name</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="income">Income</string>
    <string name="your_budget">Your Budget</string>
    <string name="save">save</string>
    <string name="today_s_heading">Today\'s Heading</string>
    <string name="net_balance1">Net Balance</string>
    <string name="_001">00</string>
    <string name="transactions_this_month">Transactions This Month</string>
    <string name="hi1">Hi,</string>
    <string name="Roshan">Roshan</string>
    <string name="before_we_get_started">Before We Get Started</string>
    <string name="setup_your_budget">SetUp Your Budget</string>
    <string name="user_name2">User Name</string>
    <string name="monthly_budget1">Monthly Budget</string>
    <string name="income1">Income</string>
    <string name="continue1">CONTINUE</string>
    <string name="register">Register</string>
    <string name="already_registered_click_here_to_login">ALREADY REGISTERED? CLICK HERE TO LOGIN</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_registered_click_here_to_register">NOT REGISTERED? CLICK HERE TO REGISTER</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="login">Login</string>
    <string name="todo1">TODO</string>
    <string name="login_in_as_guest">Login In as Guest</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="sign_in_by_email">Sign In By Email</string>
    <string name="login_as_guest">LogIn As Guest</string>
    <string name="may">MAY</string>
    <string name="view_all">View All</string>
    <string name="calender_transaction1">calender Transaction</string>
</resources>