<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/profile"
        android:contentDescription="@string/you_can_edit_transaction3"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/edit_transaction3"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/calender_view"
        android:contentDescription="@string/you_can_view_calender"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/calender_transaction"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/news_click"
        android:contentDescription="@string/you_can_view_calender1"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/calender_transaction1"
        app:showAsAction="ifRoom" />
</menu>